--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# UtopiaOS MemSearch
+# UtopiaOS MemSearch # 
 
 UtopiaOS MemSearch enhances your MacOS experience by providing a powerful capability to search through your own interaction history. It uses screen tracking and OCR technologies to record and analyze your screen, allowing you to retrieve information seamlessly from past activities.
 
